# pydelphin

./: .gitignore  .pydelphinrc  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README  README.md  delphin.sh  dmrs2mrs.py  doe.py  itsdb.py  mrs.py  mrs2dmrs.py  pyDelphin  pyproject.toml  requirements.txt  setup.py  tox.ini  util.py
.github/workflows/: checks.yml  publish.yml  pythonpublish.yml
ace/: __init__.py  erg.py  util.py
bench/: mrs_benchmarks.py
delphin/: __about__.py  __init__.py  __main__.py  _exceptions.py  ace.py  commands.py  derivation.py  edm.py  exceptions.py  hierarchy.py  highlight.py  interface.py  itsdb.py  lnk.py  main.py  predicate.py  repp.py  scope.py  sembase.py  semi.py  semops.py  tdl.py  tfs.py  tokens.py  tsdb.py  tsql.py  util.py  variable.py  vpm.py  web.py
delphin/avm/: avm.py
delphin/cli/: compare.py  convert.py  edm.py  mkprof.py  process.py  repp.py  select.py
delphin/codecs/: __init__.py  ace.py  dmrsjson.py  dmrspenman.py  dmrstikz.py  dmrx.py  eds.py  edsjson.py  edspenman.py  indexedmrs.py  mrsjson.py  mrsprolog.py  mrx.py  simpledmrs.py  simplemrs.py
delphin/derivations/: derivationtree.py
delphin/dmrs/: __init__.py  _dmrs.py  _exceptions.py  _operations.py  dmrsjson.py  dmrspenman.py  dmrx.py  simpledmrs.py
delphin/eds/: __init__.py  _eds.py  _exceptions.py  _operations.py  edsjson.py  edsnative.py  edspenman.py
delphin/extra/: __init__.py  dmrstikz_codec.py  highlight.py  latex.py
delphin/interfaces/: __init__.py  ace.py  base.py  rest.py
delphin/itsdb/: __init__.py  profile.py
delphin/lib/: pegre.py
delphin/mrs/: __init__.py  _exceptions.py  _mrs.py  _operations.py  arg.py  basemrs.py  compare.py  components.py  config.py  dmrs.py  dmrx.py  eds.py  ep.py  hcons.py  hook.py  indexedmrs.py  link.py  (+21 more)
docs/: Makefile  README.md  api.rst  conf.py  index.rst  make.bat  requirements.txt  setup.rst
recipes/: semantics.py
tests/: ace_test.py  commands_test.py  conftest.py  derivation_test.py  derivationtree_test.py  dmrs_dmrx_test.py  dmrs_simpledmrs_test.py  dmrs_test.py  edm_test.py  eds_edsnative_test.py  eds_test.py  hierarchy_test.py  interface_test.py  interfaces_ace_test.py  interfaces_base_test.py  itsdb_test.py  lnk_test.py  mrs_Dmrs_test.py  mrs_Mrs_test.py  mrs_compare_test.py  mrs_components_test.py  mrs_dmrx_test.md  mrs_eds_test.py  mrs_indexedmrs_test.py  mrs_isomorphism_test.py  mrs_mrx_test.py  mrs_path_test.md  mrs_path_test.py  mrs_query_test.py  mrs_semi_test.py  mrs_test.py  mrs_util_test.py  mrs_vpm_test.py  mrs_xmrs_test.py  predicate_test.py  repp_test.py  scope_test.py  semi_test.py  simplemrs_test.md  simplemrs_test.py  (+9 more)
(+116 files in other folders)
